--- a/prueba2/.godot/editor/editor_layout.cfg
+++ b/prueba2/.godot/editor/editor_layout.cfg
@@ -1,15 +1,8 @@
 [docks]
 
-<<<<<<< HEAD
-dock_3="Scene,Import"
-dock_3_selected_tab_idx=0
-dock_4="FileSystem"
-dock_4_selected_tab_idx=0
-dock_5="Inspector,Node,History"
-=======
+<<<<<<<HEADdock_3="Scene,Import"
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
->>>>>>> 02697d8b934076d1d4e55be0bfcdd5a05c024060
 dock_5_selected_tab_idx=0
 dock_floating={}
 dock_filesystem_h_split_offset=240
@@ -30,12 +23,9 @@ dock_hsplit_1=0
 dock_hsplit_2=270
 dock_hsplit_3=-270
 dock_hsplit_4=0
-<<<<<<< HEAD
-=======
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
->>>>>>> 02697d8b934076d1d4e55be0bfcdd5a05c024060
 
 [EditorNode]
 
@@ -43,21 +33,13 @@ open_scenes=PackedStringArray("res://Nivel0.tscn")
 current_scene="res://Nivel0.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-<<<<<<< HEAD
-selected_main_editor_idx=1
-=======
 selected_main_editor_idx=0
->>>>>>> 02697d8b934076d1d4e55be0bfcdd5a05c024060
 
 [EditorWindow]
 
 screen=0
 mode="maximized"
-<<<<<<< HEAD
 position=Vector2i(0, 23)
-=======
-position=Vector2i(0, 29)
->>>>>>> 02697d8b934076d1d4e55be0bfcdd5a05c024060
 
 [ScriptEditor]
 
